--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>Hello</head>
+ <head>
+   <title>Hello</title>
+ </head>
  <body>
+  <h1>Hello to My Web Site</h1>
   Hello, World!
  </body>
 </html>
