--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
    <title>Hello</title>
  </head>
  <body>
-<<<<<<< HEAD
-  <h1>Hello to My Web Site!</h1>
-=======
-  <h1 style="color: blue;">Hello to My Web Site</h1>
->>>>>>> 1d1388720be51f0ff86ef2416bb8a928ebfbd797
+  <h1 style="color: blue;">Hello to My Web Site!!</h1>
   <h2>Hello!</h2>
   Hello, World!
  </body>
